[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sipgate_e2e_test_utils"
version = "4.2.0"
authors = []
description = "A library for common utils used in E2E testing (XML-, JSON-RPC, awaiting assertions, JobD helpers)"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

dependencies = []

[project.optional-dependencies]
jobd = [
    "http_request_recorder @ https://github.com/sipgate/http-request-recorder/archive/bf99fe64fd67db9df845be0e8da7e2601d9c8eef.zip"
]
rpc_matchers = [
    "http_request_recorder @ https://github.com/sipgate/http-request-recorder/archive/bf99fe64fd67db9df845be0e8da7e2601d9c8eef.zip"
]
db = [
    "SQLAlchemy~=2.0.43"
]
metrics = [
    "prometheus-client~=0.23.1"
]
kafka = [
    "confluent-kafka~=2.10.0"
]
dev = [
    "pre-commit",
]

[tool.setuptools.package-data]
sipgate_e2e_test_utils = ["jobd_functions.xml"]

[project.urls]
Homepage = "https://github.com/sipgate/sipgate-e2e-test-utils"
Issues = "https://github.com/sipgate/sipgate-e2e-test-utils/issues"

[tool.autopep8]
max_line_length = 200

[tool.ruff]
line-length = 200
